@@ -9,7 +9,8 @@ Description: choroplethr simplifies the creation of choropleths in R. A
     are handled automatically. choroplethr provides native support for viewing
     data from the US Census's American Community Survey (ACS).
 Version: 1.4.0
-Author: Ari Lamstein <arilamstein@gmail.com>
+Author: Ari Lamstein <arilamstein@gmail.com>[cre, aut], 
+        Brian P Johnson <brian@pjohnson.info> [ctb, frontend animation code]
 Maintainer: Ari Lamstein <arilamstein@gmail.com>
 URL: https://github.com/trulia/choroplethr/,
     https://groups.google.com/forum/#!forum/choroplethr
