@@ -11,6 +11,7 @@
 #' @return Nothing.  However, a variable number of files are written to the current working directory.
 #' 
 #' @keywords choropleth animation
+#' @author Ari Lamstein (R code) and Brian Johnson (JavaScript, HTML and CSS code)
 #' 
 #' @importFrom ggplot2 ggsave
 #' @importFrom stringr str_replace fixed
@@ -51,8 +52,9 @@ choroplethr_animate = function(choropleths)
   # this is the html for an animated map
   # you need to replace {{minMaps}} and {{maxMaps}} with the min and max indices of frames
   txt = '
-  <html>
-  <head>
+<html>
+<head>
+  <title>Choroplethr Playr</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css">
   <style>
@@ -67,19 +69,52 @@ choroplethr_animate = function(choropleths)
   }
   
   .mapImage {
-  height: 400px;
+  width: 100%;
+  }
+  
+  .ranger {
+  width: 500px;
   }
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  
   </head>
-  <body ng-app="AnimatedMaps" ng-cloak>
-  <div ng-controller="ClientApp" class="well well-lg">
-  <img class="mapImage" ng-animate=" "animate" " ng-src="choropleth_{{dateValue}}.png">
-  <input type="range" class="input-sm" ng-model="dateValue" min="{{minMaps}}" max="{{maxMaps}}">
-  <div class="panel" ng-bind="dateValue"></div>
-  <button class="btn btn-primary" ng-click="play()">Play</button>
-  <button class="btn btn-primary" ng-click="stop()">Stop</button>
+  <body ng-app="AnimatedMaps" ng-cloak ng-controller="ClientApp">
+  <div class="container">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+  <span class="sr-only">Toggle navigation</span>
+  <span class="icon-bar"></span>
+  <span class="icon-bar"></span>
+  <span class="icon-bar"></span>
+  </button>
+  <a class="navbar-brand" href="#">Choroplethr Playr</a>
+  </div>
+  <form class="navbar-form navbar-right" role="search">
+  <div class="form-group">
+  <button type="button" class="btn btn-success" ng-click="play()">&nbsp;<span class="glyphicon glyphicon-play glyphicon-inverse"></span>
+  </button>
+  <button type="button" class="btn btn-danger" ng-click="stop()"><span class="glyphicon glyphicon-stop"></span>&nbsp;
+  </button>
+  <button type="button" class="btn btn-default" ng-click="minusValue()">
+  <span class="glyphicon glyphicon-minus"></span>&nbsp;</button>
+  <input type="range" class="form-control ranger" ng-model="dateValue" min="{{minValue}}" max="{{maxValue}}">
+  <button type="button" class="btn btn-default" ng-click="plusValue()">&nbsp;<span class="glyphicon glyphicon-plus"></span>
+  </button>
+  </div>
+  </form>
+  </div>
+  </nav>
+  </div>
+  <div class="container">
+  <div class="page-header">
+  <h2 class="text-center well" ng-bind="dateValue"></h2>
+  </div>
+  </div>
+  <div class="container">
+  <img class="mapImage img-thumbnail" ng-animate=" "animate" " ng-src="{{mapURL()}}">
   </div>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
@@ -89,38 +124,95 @@ choroplethr_animate = function(choropleths)
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular-resource.min.js"></script>
   <script>
   angular.module("AnimatedMaps", ["ngAnimate"])
-  .controller("ClientApp", ["$scope", "$window", function($scope, $window) {
+  .controller("ClientApp", ["$scope", "$window", "$interpolate", function($scope, $window, $interpolate) {
   "use strict";
+  /**
+  * The normalized date
+  * @type {number}
+  */
   $scope.dateValue = 1;
+  /**
+  * A reference for storing the setInterval
+  * @type {null}
+  */
   $scope.intervalRef = null;
-  $scope.maxMaps = {{maxMaps}};
-  $scope.minMaps = 1;
+  /**
+  * The starting map dateValue
+  * @type {number}
+  */
+  $scope.maxValue = [[[max]]];
+  /**
+  * The ending map dateValue
+  * @type {number}
+  */
+  $scope.minValue = 1;
+  /**
+  * url template for preloading images
+  * @type {string}
+  */
+  $scope.urlTemplate = $interpolate("choropleth_{{dateValue}}.png");
+  /**
+  * The map image URL being displayed
+  * @type {string}
+  */
+  $scope.mapURL = function() {
+    return $scope.urlTemplate({dateValue: $scope.dateValue});
+  }
+  /**
+  * Increment the date
+  */
+  $scope.plusValue = function() {
+  $scope.dateValue++;
+  }
+  /**
+  * Decrement the date
+  */
+  $scope.minusValue = function() {
+  $scope.dateValue--;
+  }
+  /**
+  * Start animation traversing through all images in order
+  */
   $scope.play = function() {
   $scope.intervalRef = $window.setInterval($scope.nextMap, 1000);
   };
+  /**
+  * Stop the animation
+  */
   $scope.stop = function() {
   $window.clearInterval($scope.intervalRef);
   };
+  /**
+  * Load Next Map Image
+  */
   $scope.nextMap = function() {
   $scope.$apply(function() {
-  if ($scope.dateValue < $scope.maxMaps) {
+  if ($scope.dateValue < $scope.maxValue) {
   $scope.dateValue = Number($scope.dateValue) + 1;
   } else {
   $window.clearInterval($scope.intervalRef);
   }
   });
   };
-  }]).run(function() {
+  /**
+  * Preload Map Images
+  */
+  $scope.preloadImages = function() {
+  for(var i = $scope.minValue; i <= $scope.maxValue; i++) {
+  var img = new Image();
+  img.src = $scope.urlTemplate({dateValue: i});
+  }
+  };
+  // Preload All Map Images
+  $scope.preloadImages();
+  }]).run([function() {
   "use strict";
-  });
-  
+  }]);
   </script>
   </body>
   </html>
   '
   
-  txt = str_replace(txt, fixed("{{minMaps}}"), 1)
-  txt = str_replace(txt, fixed("{{maxMaps}}"), length(choropleths))
-  txt = str_replace(txt, fixed("{{maxMaps}}"), length(choropleths))
+  txt = str_replace(txt, fixed("[[[max]]]"), length(choropleths))
   write(txt, "animated_choropleth.html")
 }
