@@ -1,17 +1,0 @@
-.animate-enter {
-    -webkit-transition: 1s linear all; /* Chrome */
-    transition: 1s linear all;
-    opacity: 0;
-}
-
-.animate-enter.animate-enter-active {
-    opacity: 1;
-}
-
-.mapImage {
-    width: 100%;
-}
-
-.ranger {
-    width: 500px;
-}
