@@ -1,55 +1,0 @@
-<html>
-<head>
-  <title>Choroplethr Playr</title>
-  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="css/custom.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-</head>
-<body ng-app="AnimatedMaps" ng-cloak ng-controller="ClientApp">
-<div class="container">
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Choroplethr Playr</a>
-      </div>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <button type="button" class="btn btn-success" ng-click="play()">&nbsp;<span class="glyphicon glyphicon-play glyphicon-inverse"></span>
-          </button>
-          <button type="button" class="btn btn-danger" ng-click="stop()"><span class="glyphicon glyphicon-stop"></span>&nbsp;
-          </button>
-          <button type="button" class="btn btn-default" ng-click="minusValue()">
-            <span class="glyphicon glyphicon-minus"></span>&nbsp;</button>
-          <input type="range" class="form-control ranger" ng-model="dateValue" min="{{minValue}}" max="{{maxValue}}">
-          <button type="button" class="btn btn-default" ng-click="plusValue()">&nbsp;<span class="glyphicon glyphicon-plus"></span>
-          </button>
-        </div>
-      </form>
-    </div>
-  </nav>
-</div>
-<div class="container">
-  <div class="page-header">
-    <h2 class="text-center well" ng-bind="dateValue"></h2>
-  </div>
-</div>
-<div class="container">
-  <img class="mapImage img-thumbnail" ng-animate=" 'animate' " ng-src="{{mapURL}}">
-</div>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular.min.js"></script>
-<script src="http://code.angularjs.org/1.2.10/angular-animate.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular-resource.min.js"></script>
-<script src="js/client.js"></script>
-</body>
-</html>
