@@ -2,6 +2,7 @@ choroplethr 1.4
 ----------------------------------------------------------------
 
 FEATURE
+  -New choroplethr_animate function for animating choropleth maps.  See ?choroplethr_animate
   -Handle string data as values
   -add example datasets and update help
   -Add commas to scales.
